sgd/reproduction/playground/objects/SVMXC__Activity_Product__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Attach Activity Products Activity Product Level for the Activity Master.</description>
    <fields>
        <fullName>SMAX_PS_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>外部キー</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product_Classification__c</fullName>
        <formula>CASE( SVMXC__Product__r.SMAX_PS_Product_Classification__c ,
&quot;F01&quot;, &quot;ME大型製品&quot;,
&quot;F02&quot;, &quot;エンジン（旧価格）&quot;,
&quot;F03&quot;, &quot;エンジン（DTS）&quot;,
&quot;F04&quot;, &quot;工計製品&quot;,
&quot;F16&quot;, &quot;卓上/ﾎﾟｰﾀﾌﾞﾙ型pH・水質計&quot;,
&quot;F17&quot;, &quot;工計製品（無償）&quot;,
&quot;F18&quot;, &quot;科学・半導体・医用&quot;,
&quot;F19&quot;, &quot;科学・半導体（HFD用）&quot;,
&quot;F20&quot;, &quot;エンジン（新価格）&quot;,
&quot;F22&quot;, &quot;科学・半導体（1年以内）&quot;,
&quot;F23&quot;, &quot;科学・半導体（1年以上）&quot;,
&quot;I08&quot;, &quot;Ｓランク&quot;,
&quot;I09&quot;, &quot;Ａランク&quot;,
&quot;I10&quot;, &quot;Ｂランク&quot;,
&quot;I11&quot;, &quot;Ｃランク&quot;,
&quot;I12&quot;, &quot;Ｄ－１ランク&quot;,
&quot;I13&quot;, &quot;Ｄ－２ランク&quot;,
&quot;I14&quot;, &quot;Ｅランク&quot;,
&quot;I15&quot;, &quot;Ｆランク&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>製品区分</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Target__c</fullName>
        <formula>CASE( SVMXC__Product__r.SMAX_PS_Service_Target__c ,
  &quot;RepairLabor&quot;, &quot;客先訪問修理：作業費&quot;,
  &quot;InhouseRepairLabor&quot;, &quot;社内修理：作業費&quot;,
  &quot;InspectionLabor&quot;, &quot;点検：作業費&quot;,
  &quot;InspectionEquipment&quot;, &quot;検査機器：検査設備機器&quot;,
  &quot;JigTool&quot;, &quot;検査機器：治工具&quot;,
  &quot;Consumption&quot;, &quot;検査機器：消耗品・試料&quot;,
&quot;その他&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>対象区分</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Unit_Of_Measure__c</fullName>
        <formula>CASE( SVMXC__Product__r.SMAX_PS_Unit_Of_Measure__c , 
&quot;Day&quot;, &quot;日&quot;,
&quot;Hour&quot;, &quot;時間&quot;,
&quot;Set&quot;, &quot;式&quot;,
&quot;Cycle&quot;, &quot;回&quot;,
&quot;Count&quot;, &quot;本&quot;,
&quot;Stay&quot;, &quot;泊&quot;,
&quot;ManDay&quot;, &quot;人&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>単位（サービス品目）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Activity_Product__c</fullName>
        <formula>TEXT(SVMXC__Activity__r.SVMXC__Activity_Type__c)+ &quot; : &quot; +
IF(LEN(SVMXC__Product__r.Id) &gt; 0,SVMXC__Product__r.Name,
IF(LEN(TEXT( SVMXC__Product_Line__c )) &gt; 0,TEXT(SVMXC__Product_Line__c),
IF(LEN(TEXT( SVMXC__Product_Family__c )) &gt; 0,TEXT(SVMXC__Product_Family__c),&apos;&apos;
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Activity__c</fullName>
        <label>Activity</label>
        <referenceTo>SVMXC__Activity_Master__c</referenceTo>
        <relationshipLabel>Activity Products</relationshipLabel>
        <relationshipName>Activity_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Dimension</fullName>
                </value>
                <value>
                    <fullName>Latitude</fullName>
                </value>
                <value>
                    <fullName>OptiPlex</fullName>
                </value>
                <value>
                    <fullName>PowerConnect</fullName>
                </value>
                <value>
                    <fullName>PowerEdge</fullName>
                </value>
                <value>
                    <fullName>PowerVault</fullName>
                </value>
                <value>
                    <fullName>Precision</fullName>
                </value>
                <value>
                    <fullName>Vostro</fullName>
                </value>
                <value>
                    <fullName>XPS</fullName>
                </value>
                <value>
                    <fullName>Antivirus</fullName>
                </value>
                <value>
                    <fullName>Recovery</fullName>
                </value>
                <value>
                    <fullName>Productivity</fullName>
                </value>
                <value>
                    <fullName>Operating System</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1000</fullName>
                    <label>製品</label>
                </value>
                <value>
                    <fullName>2000</fullName>
                    <label>機器</label>
                </value>
                <value>
                    <fullName>9999</fullName>
                    <label>部品</label>
                </value>
                <value>
                    <fullName>3000</fullName>
                    <label>作業費</label>
                </value>
                <value>
                    <fullName>4000</fullName>
                    <label>検査機器</label>
                </value>
                <value>
                    <fullName>5000</fullName>
                    <label>その他</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Activity Products</relationshipLabel>
        <relationshipName>Activity_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Activity Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SMAX_PS_All_Activity_Products</fullName>
        <columns>NAME</columns>
        <columns>SVMXC__Product__c</columns>
        <columns>SMAX_PS_Product_Classification__c</columns>
        <columns>SMAX_PS_Service_Target__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SMAX_PS_Product_Line_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(SVMXC__Product__c  &lt;&gt; null,
      					
					IF(NOT(OR(ISPICKVAL(SVMXC__Product__r.SVMXC__Product_Line__c, &apos;3000&apos;),
									ISPICKVAL(SVMXC__Product__r.SVMXC__Product_Line__c, &apos;4000&apos;),
									ISPICKVAL(SVMXC__Product__r.SVMXC__Product_Line__c, &apos;5000&apos;))),true,false),false)</errorConditionFormula>
        <errorMessage>作業費/検査機器/その他の品目のみ設定してください</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SVMXC__SVMX_Product_Validation</fullName>
        <active>true</active>
        <description>Product Validation</description>
        <errorConditionFormula>IF(LEN(SVMXC__Product__r.Id) &gt; 0, IF(OR(LEN(TEXT(SVMXC__Product_Line__c)) &gt; 0, LEN(TEXT(SVMXC__Product_Family__c)) &gt; 0), TRUE, FALSE), IF(LEN(TEXT(SVMXC__Product_Line__c)) &gt; 0, IF(LEN(TEXT(SVMXC__Product_Family__c)) &gt; 0, TRUE, FALSE), IF(LEN(TEXT(SVMXC__Product_Family__c)) &gt; 0, FALSE, TRUE)))</errorConditionFormula>
        <errorMessage>Activity Product must be defined for only one of Product, Product Family, or Product Line.</errorMessage>
    </validationRules>
</CustomObject>